--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <div class="tarjeta">
             <h3><a href="/layout-01-g.html">Grid Template 01</a></h3>
         </div>
-        <div class="tarjeta"><h3><a href="/layout-01-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-02-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-03-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-04-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-05-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-06-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-07-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-08-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-09-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="/layout-10-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-01-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-02-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-03-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-04-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-05-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-06-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-07-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-08-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-09-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta"><h3><a href="layout-10-g.html">Grid Template 01</a></h3></div>
 
        </div>
    
