--- a/layout-01-g.html
+++ b/layout-01-g.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="./css/grid01.css">
+    <link rel="stylesheet" href="css/grid01.css">
     <title>GRID LAYOUT 01 </title>
 </head>
 <body>
