correccion nombre de links

--- a/index.html
+++ b/index.html
@@ -16,19 +16,36 @@
        </div>
 
        <div id="box-tarjetas">
-        <div class="tarjeta">
-            <h3><a href="/layout-01-g.html">Grid Template 01</a></h3>
+        <div class="tarjeta t1">
+            <h3><a href="layout-01-g.html">Grid Template 01</a></h3>
         </div>
-        <div class="tarjeta"><h3><a href="layout-01-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-02-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-03-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-04-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-05-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-06-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-07-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-08-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-09-g.html">Grid Template 01</a></h3></div>
-        <div class="tarjeta"><h3><a href="layout-10-g.html">Grid Template 01</a></h3></div>
+        <div class="tarjeta t2">
+            <h3><a href="layout-02-g.html">Grid Template 02</a></h3>
+        </div>
+        <div class="tarjeta t3">
+            <h3><a href="layout-03-g.html">Grid Template 03</a></h3>
+        </div>
+        <div class="tarjeta t4">
+            <h3><a href="layout-04-g.html">Grid Template 04</a></h3>
+        </div>
+        <div class="tarjeta t5">
+            <h3><a href="layout-05-g.html">Grid Template 05</a></h3>
+        </div>
+        <div class="tarjeta t6">
+            <h3><a href="layout-06-g.html">Grid Template 06</a></h3>
+        </div>
+        <div class="tarjeta t7">
+            <h3><a href="layout-07-g.html">Grid Template 07</a></h3>
+        </div>
+        <div class="tarjeta t8">
+            <h3><a href="layout-08-g.html">Grid Template 08</a></h3>
+        </div>
+        <div class="tarjeta t9">
+            <h3><a href="layout-09-g.html">Grid Template 09</a></h3>
+        </div>
+        <div class="tarjeta t10">
+            <h3><a href="layout-10-g.html">Grid Template 10</a></h3>
+        </div>
 
        </div>
    
